editors/tree-sitter-gin/test/corpus/initial.txt
================================================================================
use with alias
================================================================================

use core as c

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (module_import
      (path
        (identifier))
      (identifier))))

================================================================================
consecutive selective uses
================================================================================

use '../target/'.target
use BigInt, Int

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (module_import
      (string)
      (import_symbol
        (identifier))))
  (use_statement
    (module_import
      (type_identifier))
    (module_import
      (type_identifier))))

================================================================================
declare record fields
================================================================================

Slice(x) has pointer Pointer(x), length PointerSize

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    name: (type_identifier)
    (declaration_parameters
      (type_variable))
    (decl_member_list
      (record_field
        name: (identifier)
        type: (tag
          (type_application
            (type_identifier)
            (type_variable))))
      (record_field
        name: (identifier)
        type: (tag
          (type_identifier))))))

================================================================================
declare interface signatures
================================================================================

Allocator has
    allocate(ref self, l Layout) Slice(Byte) or AllocError
    deallocate(ref self, p Pointer(Byte), l Layout)

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    name: (type_identifier)
    (decl_member_list
      (record_signature
        name: (identifier)
        (parameters
          (parameter
            name: (self_parameter))
          (parameter
            name: (identifier)
            type: (tag
              (type_identifier))))
        return_type: (type_union
          (tag
            (type_application
              (type_identifier)
              (tag
                (type_identifier))))
          (tag
            (type_identifier))))
      (record_signature
        name: (identifier)
        (parameters
          (parameter
            name: (self_parameter))
          (parameter
            name: (identifier)
            type: (tag
              (type_application
                (type_identifier)
                (tag
                  (type_identifier)))))
          (parameter
            name: (identifier)
            type: (tag
              (type_identifier))))))))

================================================================================
composed interface with qualified methods
================================================================================

Combined has TraitA and TraitB
    TraitA.run(ref self) Int := 1
    TraitB.run(ref self) Int := 2

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    name: (type_identifier)
    (trait_composition
      trait: (tag
        (type_identifier))
      trait: (tag
        (type_identifier)))
    (decl_member_list
      (record_signature
        (qualified_member_name
          trait: (type_identifier)
          name: (identifier))
        (parameters
          (parameter
            name: (self_parameter)))
        return_type: (tag
          (type_identifier))
        (member_default
          value: (literal
            (number))))
      (record_signature
        (qualified_member_name
          trait: (type_identifier)
          name: (identifier))
        (parameters
          (parameter
            name: (self_parameter)))
        return_type: (tag
          (type_identifier))
        (member_default
          value: (literal
            (number)))))))

================================================================================
declare union
================================================================================

Bool is True or False

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    name: (type_identifier)
    (union_type
      (variant
        (tag
          (type_identifier)))
      (variant
        (tag
          (type_identifier))))))

================================================================================
bind with literal
================================================================================

x: 42

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    value: (literal
      (number))))

================================================================================
bind with camelCase name
================================================================================

regConstraint(reg Register) String: ''

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    (parameters
      (parameter
        name: (identifier)
        type: (tag
          (type_identifier))))
    return_type: (tag
      (type_identifier))
    value: (literal
      (string))))

================================================================================
auto trait
================================================================================

#auto
Sized has size Size: compute_size(Self)

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (attributes
      (identifier))
    name: (type_identifier)
    (decl_member_list
      (record_field
        name: (identifier)
        type: (tag
          (type_identifier))
        (field_default
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (self_type))))))))

================================================================================
auto trait with callable attribute
================================================================================

#target("wasm32")
Copy has can_copy Bool: is_copy(Self)

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (attributes
      (attribute_call
        name: (identifier)
        arguments: (argument_list
          (format_string))))
    name: (type_identifier)
    (decl_member_list
      (record_field
        name: (identifier)
        type: (tag
          (type_identifier))
        (field_default
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (self_type))))))))

================================================================================
when arms with logical and body
================================================================================

all_named_copy(fields List(NamedTy)) Bool := when fields is
    []                  then True
    [f, ...rest]        then is_copy(f.ty) and all_named_copy(rest)

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    (parameters
      (parameter
        name: (identifier)
        type: (tag
          (type_application
            (type_identifier)
            (tag
              (type_identifier))))))
    return_type: (tag
      (type_identifier))
    value: (when_expression
      subject: (identifier)
      (when_pattern_arm
        pattern: (is_pattern
          (list_pattern))
        body: (type_identifier))
      (when_pattern_arm
        pattern: (is_pattern
          (list_pattern
            (is_pattern
              (identifier))
            (is_pattern
              (identifier))))
        body: (binary_expression
          left: (call_expression
            function: (identifier)
            arguments: (argument_list
              (member_expression
                base: (identifier)
                field: (identifier))))
          right: (call_expression
            function: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
when is arms without repeated is
================================================================================

is_copy(x Type) Bool := when x is
    Primitive(_, _)     then True
    Ref(_, False)       then True
    Opaque(_)           then False
    Array(elem, _)      then is_copy(elem)

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    (parameters
      (parameter
        name: (identifier)
        type: (tag
          (type_identifier))))
    return_type: (tag
      (type_identifier))
    value: (when_expression
      subject: (identifier)
      (when_pattern_arm
        pattern: (is_pattern
          (tag
            (type_application
              (type_identifier)
              (type_variable)
              (type_variable))))
        body: (type_identifier))
      (when_pattern_arm
        pattern: (is_pattern
          (tag
            (type_application
              (type_identifier)
              (type_variable)
              (tag
                (type_identifier)))))
        body: (type_identifier))
      (when_pattern_arm
        pattern: (is_pattern
          (tag
            (type_application
              (type_identifier)
              (type_variable))))
        body: (type_identifier))
      (when_pattern_arm
        pattern: (is_pattern
          (tag
            (type_application
              (type_identifier)
              (type_variable)
              (type_variable))))
        body: (call_expression
          function: (identifier)
          arguments: (argument_list
            (identifier)))))))

================================================================================
newline tests: call args
================================================================================

result : write(
    fd
    buf
    len
)

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    value: (call_expression
      function: (identifier)
      arguments: (argument_list
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
newline tests: bundle exports
================================================================================

use 'mod'.(
    Foo
    Bar
)

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (module_import
      (string)
      (import_symbol
        (type_identifier))
      (import_symbol
        (type_identifier)))))

================================================================================
newline tests: function params
================================================================================

add(
    a Int
    b Int
) Int := a + b

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    (parameters
      (parameter
        name: (identifier)
        type: (tag
          (type_identifier)))
      (parameter
        name: (identifier)
        type: (tag
          (type_identifier))))
    return_type: (tag
      (type_identifier))
    value: (binary_expression
      left: (identifier)
      right: (identifier))))

================================================================================
newline tests: record fields
================================================================================

Point has
    x Int
    y Int

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    name: (type_identifier)
    (decl_member_list
      (record_field
        name: (identifier)
        type: (tag
          (type_identifier)))
      (record_field
        name: (identifier)
        type: (tag
          (type_identifier))))))

================================================================================
declare unit
================================================================================

Unit is ()

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (type_identifier)
    (unit_type)))

================================================================================
declare member defaults
================================================================================

Widget has
    label Str: 'ok'
    size Int := compute_size()
    render(self) Str := label

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (type_identifier)
    (decl_member_list
      (record_field
        (identifier)
        (tag
          (type_identifier))
        (field_default
          (literal
            (string))))
      (record_field
        (identifier)
        (tag
          (type_identifier))
        (field_default
          (call_expression
            (identifier)
            (argument_list))))
      (record_signature
        (identifier)
        (parameters
          (parameter
            (self_parameter)))
        (tag
          (type_identifier))
        (member_default
          (identifier))))))

================================================================================
qualified trait members
================================================================================

Bool has ToString
    ToString.to_string: 'true'
    ToString.format(self) Str := 'true'

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (type_identifier)
    (trait_composition
      (tag
        (type_identifier)))
    (decl_member_list
      (record_property
        (qualified_member_name
          (type_identifier)
          (identifier))
        (field_default
          (literal
            (string))))
      (record_signature
        (qualified_member_name
          (type_identifier)
          (identifier))
        (parameters
          (parameter
            (self_parameter)))
        (tag
          (type_identifier))
        (member_default
          (literal
            (string)))))))

================================================================================
parenthesized has members are rejected
================================================================================

Coord has (x Int, y Int)

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (type_identifier)
    (ERROR)
    (decl_member_list
      (record_field
        (identifier)
        (tag
          (type_identifier)))
      (record_field
        (identifier)
        (tag
          (type_identifier)))))
  (ERROR))

================================================================================
grouped attributes are rejected
================================================================================

#[inline, complexity(Constant)]
get(i Int) Byte: buf.(i)

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    (attributes
      (ERROR)
      (identifier))
    (ERROR
      (identifier)
      (parameters
        (parameter
          (tag
            (type_identifier)))))
    (identifier)
    (parameters
      (parameter
        (identifier)
        (tag
          (type_identifier))))
    (tag
      (type_identifier))
    (member_expression
      (identifier)
      (argument_list
        (identifier)))))

================================================================================
grouped references and prefix local bindings
================================================================================

borrow(ref{r} value Entity) ref{r} Entity: value
mut current Entity: place

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    (identifier)
    (parameters
      (parameter
        (reference_group
          (identifier))
        (identifier)
        (tag
          (type_identifier))))
    (tag
      (reference_type
        (reference_group
          (identifier))
        (tag
          (type_identifier))))
    (identifier))
  (bind_statement
    (identifier)
    (tag
      (type_identifier))
    (identifier)))

================================================================================
typed hidden state parameters
================================================================================

List(x, length PointerSize: ?, capacity PointerSize: ?, storage StorageIdentity: ?) has pointer Pointer(x), length PointerSize, capacity PointerSize

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    name: (type_identifier)
    (declaration_parameters
      (type_variable)
      (declaration_parameter
        name: (identifier)
        type: (tag
          (type_identifier)))
      (declaration_parameter
        name: (identifier)
        type: (tag
          (type_identifier)))
      (declaration_parameter
        name: (identifier)
        type: (tag
          (type_identifier))))
    (decl_member_list
      (record_field
        name: (identifier)
        type: (tag
          (type_application
            (type_identifier)
            (type_variable))))
      (record_field
        name: (identifier)
        type: (tag
          (type_identifier)))
      (record_field
        name: (identifier)
        type: (tag
          (type_identifier))))))

================================================================================
ownership modifiers and expressions
================================================================================

drop(eat value Entity): eat value
inspect(ref value Entity, mut output Entity): update(ref value, mut output)
main: drop(eat value)

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    (parameters
      (parameter
        name: (identifier)
        type: (tag
          (type_identifier))))
    value: (unary_expression
      operand: (identifier)))
  (bind_statement
    name: (identifier)
    (parameters
      (parameter
        name: (identifier)
        type: (tag
          (type_identifier)))
      (parameter
        name: (identifier)
        type: (tag
          (type_identifier))))
    value: (call_expression
      function: (identifier)
      arguments: (argument_list
        (unary_expression
          operand: (identifier))
        (unary_expression
          operand: (identifier)))))
  (bind_statement
    name: (identifier)
    value: (call_expression
      function: (identifier)
      arguments: (argument_list
        (unary_expression
          operand: (identifier))))))

================================================================================
semantic group paths
================================================================================

power_up(ref{entities} entity Entity, mut{entities.rings.items} ring Ring): 0

--------------------------------------------------------------------------------

(source_file
  (bind_statement
    name: (identifier)
    (parameters
      (parameter
        (reference_group
          root: (identifier))
        name: (identifier)
        type: (tag
          (type_identifier)))
      (parameter
        (reference_group
          root: (identifier)
          segment: (identifier)
          segment: (identifier))
        name: (identifier)
        type: (tag
          (type_identifier))))
    value: (literal
      (number))))
